--- a/src/frontend/src/app/pages/secure/confirm-donation/confirm-donation.component.html
+++ b/src/frontend/src/app/pages/secure/confirm-donation/confirm-donation.component.html
@@ -38,7 +38,7 @@
                         {{formData.warehouse.postalCode}},
                         {{formData.warehouse.street}}</b>. To ensure proper identification, please include the shipment
                     number
-                    <b>{{donateNumber}}</b>
+                    <b>{{donateName}}</b>
                     in the package. This will help us match your shipment with your account.
                 </p>
 
