--- a/src/frontend/src/app/pages/secure/stocks/stocks.component.html
+++ b/src/frontend/src/app/pages/secure/stocks/stocks.component.html
@@ -2,7 +2,50 @@
     <div class="col-12">
         <div class="p-3">
             <p-card>
-                - Lista ze stockami<br />
+                <h1 class="text-2xl font-bold m-0">Stocks</h1>
+
+                <ng-container *ngIf="pagedResult">
+
+                    <div *ngIf="pagedResult.queryable.length === 0"
+                        class="flex align-items-center justify-content-center">
+                        <h3>No stock!</h3>
+                    </div>
+
+                    <p-card class="p-2" *ngFor="let item of pagedResult.queryable">
+                        <div class="grid">
+                            <div class="col-12">
+                                <h2 class="text-xl font-bold m-0">
+                                    {{item.productName}}
+                                </h2>
+
+                                <div class="mt-2">
+                                    {{item.quantity}}{{item.unit}}
+                                </div>
+
+                                <!-- <p>
+                                    {{item.creationDate.toLocaleString(DateTime.DATETIME_MED)}} -
+                                    <b> {{getProductsText(item.productsCount)}} </b>
+
+                                    <p-tag *ngIf="item.isExpired" styleClass="ml-2 mb-1" icon="pi pi-calendar"
+                                        severity="danger" value="EXPIRED">
+                                    </p-tag>
+
+                                    <p-tag *ngIf="!item.isDelivered" styleClass="ml-2 mb-1" icon="pi pi-calendar"
+                                        severity="warning" value="Not delivered">
+                                    </p-tag>
+
+                                    <p-tag *ngIf="item.isDelivered" styleClass="ml-2 mb-1" icon="pi pi-calendar"
+                                        severity="success" value="Delivered">
+                                    </p-tag>
+                                </p> -->
+
+                            </div>
+                        </div>
+                    </p-card>
+
+                    <p-paginator [rows]="pageSize" [totalRecords]="pagedResult.rowCount"
+                        (onPageChange)="paginate($event)"></p-paginator>
+                </ng-container>
             </p-card>
         </div>
     </div>
