change work screen

--- a/src/frontend/src/app/pages/secure/work/work.component.html
+++ b/src/frontend/src/app/pages/secure/work/work.component.html
@@ -1,8 +1,52 @@
 <div class="grid">
-    <div class="col-12">
+    <div class="col-12 lg:col-12">
         <div class="p-3">
             <p-card>
-                - Informacje o tym jak można pracować<br />
+                <h1 class="text-2xl font-bold m-0">Choose how you want to help:</h1>
+
+                <div class="p-1"></div>
+
+                <h3>Deliverer</h3>
+
+                <p>
+                    Start with yourself and help ingoodhands deliver food and equipment to those most in need.
+                    All you need is your own car. In our application, you can track current orders and deliver
+                    designated goods to
+                    those in need. Become a hero and help people in need.
+                </p>
+
+                <hr>
+
+                <h3>Warehouse employee</h3>
+
+                <p>
+                    Our work requires a lot of logistics and solving warehouse problems.
+                    A warehouse worker handles receipts of goods and separates goods for drivers.
+                    Our employees are masters in their profession and try to do everything in their power to use their
+                    potential.
+                </p>
+
+
+                <hr>
+
+                <div class="flex align-items-center justify-content-center">
+                    <h1>cv@ingoodhands.com</h1>
+                </div>
+
+                <p>
+                    Please email: <b>cv@ingoodhands.com</b>
+                    to express your willingness to help and try to change the
+                    world for the better.
+                    You will go through a short validation stage, during which we will get to know you better. Once your
+                    application is accepted, you will be assigned a warehouse and you will receive training. Thanks!
+                </p>
+
+
+                <div class="p-3"></div>
+
+                <div class="flex align-items-center justify-content-center">
+                    <img src="assets/img/man.webp" alt="ingoodhands" width="90%" height="100%">
+                </div>
             </p-card>
         </div>
     </div>
