--- a/src/frontend/src/app/pages/home/work/work.component.html
+++ b/src/frontend/src/app/pages/home/work/work.component.html
@@ -1,7 +1,7 @@
 <div class="p-3">
     <h1>Work for us</h1>
 
-    <h3>Driver</h3>
+    <h3>Deliverer</h3>
 
     <p>
         Start with yourself and help ingoodhands deliver food and equipment to those most in need.
