--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -4,4 +4,4 @@
 
 <p-toast></p-toast>
 
-<router-outlet *ngIf="authChecked"></router-outlet>
+<router-outlet *ngIf="authChecked && loaded"></router-outlet>
