--- a/src/frontend/src/app/pages/secure/my-donation/my-donation.component.html
+++ b/src/frontend/src/app/pages/secure/my-donation/my-donation.component.html
@@ -73,7 +73,7 @@
                     </div>
 
                     <div class="col-12">
-                        <google-map [center]="getMapCoords()" height="500px" width="100%"></google-map>
+                        <google-map [center]="location" height="500px" width="100%"></google-map>
                     </div>
                 </div>
             </p-card>
