--- a/src/frontend/src/app/pages/secure/request-help/request-help.component.html
+++ b/src/frontend/src/app/pages/secure/request-help/request-help.component.html
@@ -2,7 +2,23 @@
     <div class="col-12">
         <div class="p-3">
             <p-card>
-                - Mapa<br />
+                <div class="grid">
+                    <div class="col-12">
+                        <div class="left-right-container mb-4">
+                            <div>
+                                <h2 class="text-2xl font-bold m-0"> My orders </h2>
+                            </div>
+                            <div>
+                                <button routerLink="/secure/create-order" pButton pRipple type="button"
+                                    label="CREATE ORDER" class="p-button-outlined"></button>
+                            </div>
+                        </div>
+                        <google-map [center]="location" [zoom]="5" height="500px" width="100%">
+                            <map-marker *ngFor="let marker of markers" (mapClick)="onMarkerClick(marker.item, $event)"
+                                [options]="marker.options"></map-marker>
+                        </google-map>
+                    </div>
+                </div>
             </p-card>
         </div>
     </div>
