--- a/src/frontend/src/app/pages/secure/create-address/create-address.component.html
+++ b/src/frontend/src/app/pages/secure/create-address/create-address.component.html
@@ -4,14 +4,7 @@
             <p-card>
                 <div class="grid">
                     <div class="col-12">
-                        <h2 class="text-2xl font-bold m-0"> Create order </h2>
-
-                        TODO: <br />
-                        - Create address <br />
-                        - Select address <br />
-                        - Remove address <br />
-                        - Add products <br />
-                        - Finalize <br />
+                        <h2 class="text-2xl font-bold m-0"> Create address </h2>
 
                         <p-card class="p-2">
                             <form [formGroup]="form" (submit)="onSubmitClick($event)">
