--- a/src/frontend/src/app/pages/secure/create-order/create-order.component.scss
+++ b/src/frontend/src/app/pages/secure/create-order/create-order.component.scss
@@ -1,3 +1,26 @@
 .input-field {
     width: 100%;
 }
+
+.header-container {
+    display: grid;
+    grid-template-columns: 200px auto;
+}
+
+.header-text {}
+
+.header-btn {
+    justify-self: end;
+}
+
+.address-container {
+    display: grid;
+    grid-template-columns: auto 50px;
+}
+
+.address-text {
+    display: flex;
+    align-items: center;
+}
+
+.address-btn {}
