--- a/src/frontend/src/app/pages/secure/order/order.component.html
+++ b/src/frontend/src/app/pages/secure/order/order.component.html
@@ -2,7 +2,7 @@
     <div class="col-12">
         <div class="p-3">
             <p-card>
-                - Informacje o tym jak można pracować<br />
+                - TODO<br />
             </p-card>
         </div>
     </div>
