--- a/src/frontend/src/app/pages/secure/create-order/create-order.component.html
+++ b/src/frontend/src/app/pages/secure/create-order/create-order.component.html
@@ -11,7 +11,7 @@
                                 </div>
                                 <div class="header-btn">
                                     <button routerLink="/secure/create-address" pButton pRipple type="button"
-                                        label="ADD ADDRESS" class="p-button-outlined"></button>
+                                        label="ADD ADDRESS" class="p-button-outlined p-button-secondary"></button>
                                 </div>
                             </div>
 
@@ -41,7 +41,7 @@
                             <div class="grid">
                                 <div class="col-12 flex align-items-center justify-content-end">
                                     <button (click)="onAddClick()" pButton pRipple type="button" label="ADD PRODUCT"
-                                        class="p-button-outlined"></button>
+                                        class="p-button-outlined p-button-secondary"></button>
                                 </div>
                             </div>
 
@@ -88,7 +88,7 @@
                             <div class="grid">
                                 <div class="col-12 flex align-items-center justify-content-end">
                                     <button type="submit" pButton pRipple [loading]="isSaving" label="CREATE ORDER"
-                                        class="p-button-outlined"></button>
+                                        class="p-button-outlined p-button-primary"></button>
                                 </div>
                             </div>
                         </div>
