--- a/src/frontend/src/app/pages/secure/order/order.component.html
+++ b/src/frontend/src/app/pages/secure/order/order.component.html
@@ -4,7 +4,18 @@
             <p-card>
                 <div *ngIf="order" class="grid">
                     <div class="col-12">
-                        <h2>{{ order.name }}</h2>
+                        <div style="display:grid; grid-template-columns: auto 200px">
+                            <div class="flex align-items-center justify-content-start">
+                                <h2>{{ order.name }}</h2>
+                            </div>
+                            <div class="flex align-items-center justify-content-end">
+                                <p-confirmPopup></p-confirmPopup>
+                                <button pButton icon="pi pi-check" label="CANCEL ORDER"
+                                    (click)="confirm($event)"></button>
+                            </div>
+                        </div>
+
+
                         <p class="m-0">
                             {{ order.countryName }}, {{ order.city }}
                             {{ order.postalCode }}, {{ order.fullStreet }}
