change button color

--- a/src/frontend/src/app/pages/secure/order/order.component.html
+++ b/src/frontend/src/app/pages/secure/order/order.component.html
@@ -10,7 +10,7 @@
                             </div>
                             <div class="flex align-items-center justify-content-end">
                                 <p-confirmPopup></p-confirmPopup>
-                                <button pButton icon="pi pi-check" label="CANCEL ORDER"
+                                <button pButton icon="pi pi-times" class="p-button-danger" label="CANCEL ORDER"
                                     (click)="confirm($event)"></button>
                             </div>
                         </div>
