--- a/src/frontend/src/app/pages/secure/create-order/create-order.component.html
+++ b/src/frontend/src/app/pages/secure/create-order/create-order.component.html
@@ -15,7 +15,7 @@
                                 </div>
                             </div>
 
-                            <div class="grid">
+                            <div class="grid p-2">
                                 <div class="col-12 md:col-6" *ngFor="let address of addresses">
                                     <p-card class="p-2">
                                         <div class="address-container">
@@ -35,7 +35,6 @@
                                         </div>
                                     </p-card>
                                 </div>
-
                             </div>
 
                             <div class="grid">
