--- a/src/frontend/src/app/pages/secure/my-donations/my-donations.component.html
+++ b/src/frontend/src/app/pages/secure/my-donations/my-donations.component.html
@@ -2,7 +2,9 @@
 
     <div class="col-12">
         <div class="pt-3 flex align-items-center justify-content-center">
-            <div class="shadow-3" style="background-color:#deffea; border-radius: 30px; padding:20px">
+            <div class="shadow-3"
+                pTooltip="Every delivered donation gives you 1000 score points. Every product unit (ex. 1kg) gives you 10 score points."
+                style="background-color:#deffea; border-radius: 30px; padding:20px">
                 Your donator score: <b [countUp]="service.score$ | async" [duration]="5000"></b>
             </div>
         </div>
