--- a/src/frontend/src/app/pages/secure/stocks/stocks.component.html
+++ b/src/frontend/src/app/pages/secure/stocks/stocks.component.html
@@ -2,7 +2,7 @@
     <div class="col-12">
         <div class="p-3">
             <p-card>
-                <h1 class="text-2xl font-bold m-0">Stocks (Warehouse: {{service.warehouseName$ | async}})</h1>
+                <h1 class="text-2xl font-bold m-0">Stocks of warehouse {{service.warehouseName$ | async}}</h1>
 
                 <ng-container *ngIf="pagedResult">
 
