--- a/src/frontend/src/app/pages/secure/order/order.component.html
+++ b/src/frontend/src/app/pages/secure/order/order.component.html
@@ -15,6 +15,10 @@
                         </div>
 
                         <p class="m-0">
+                            <a target="_blank"
+                                href="https://www.google.com/maps/search/?api=1&query={{order.gpsLatitude}}%2C{{order.gpsLongitude}}">
+                                <b>Address:</b>
+                            </a>
                             {{ order.countryName }}, {{ order.city }}
                             {{ order.postalCode }}, {{ order.fullStreet }}
                         </p>
@@ -32,9 +36,28 @@
                                 There are no deliveries yet! 🤨
                             </h3>
                             <ul *ngIf="order.deliveries.length!==0">
-                                <li *ngFor="let delivery of order.deliveries">
-                                    {{ delivery.name }} - {{ delivery.creationDate | string2Date }} - {{
-                                    delivery.isDelivered ? 'Delivered' : 'Not Delivered' }}
+                                <li class="pt-3" style="display:grid;grid-template-columns:auto 50px;"
+                                    *ngFor="let delivery of order.deliveries">
+                                    <div>
+                                        <div>
+                                            <b>{{ delivery.name }}</b>
+
+                                            <p-tag *ngIf="!delivery.isDelivered" styleClass="ml-2 mb-1"
+                                                icon="pi pi-calendar" severity="warning" value="Not delivered">
+                                            </p-tag>
+
+                                            <p-tag *ngIf="delivery.isDelivered" styleClass="ml-2 mb-1"
+                                                icon="pi pi-calendar" severity="success" value="Delivered">
+                                            </p-tag>
+                                        </div>
+                                        <div> {{ delivery.creationDate | string2Date }}</div>
+                                    </div>
+                                    <div>
+                                        <button pButton pRipple *ngIf="!delivery.isDelivered" type="button"
+                                            icon="pi pi-check" (click)="onMarkAsDeliveredClick(delivery)"
+                                            pTooltip="Mark as delivered"
+                                            class="p-button-rounded p-button-outlined"></button>
+                                    </div>
                                 </li>
                             </ul>
                         </p-card>
