add loading animation

--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -1,5 +1,9 @@
-<div *ngIf="!authChecked">
-  Loading...
+<div *ngIf="!authChecked || !loaded">
+  <div class="loader">
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+  </div>
 </div>
 
 <p-toast></p-toast>
